--- a/Twitter analysis.ipynb
+++ b/Twitter analysis.ipynb
@@ -2,39 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import twitter"
+    "import json\n",
+    "import pandas as pd\n",
+    "import csv\n",
+    "import re #regular expression\n",
+    "import tweepy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#pass twitter credentials to tweepy\n",
+    "with open('cred.json') as json_file:\n",
+    "    cred = json.load(json_file)\n",
+    "auth = tweepy.OAuthHandler(cred['consumer_key'], cred['consumer_secret'])\n",
+    "auth.set_access_token(cred['access_key'], cred['access_secret'])\n",
+    "api = tweepy.API(auth)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-0b9ad555b18d>, line 2)",
+     "ename": "TypeError",
+     "evalue": "'Cursor' object does not support indexing",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-0b9ad555b18d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    api = twitter.Api(consumer_key=[consumer key],\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-bfc15874d753>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtweepy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"коронавирус\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minclude_rts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'Cursor' object does not support indexing"
      ]
     }
    ],
    "source": [
-    "api = twitter.Api(consumer_key=[consumer key],\n",
-    "                  consumer_secret=[consumer secret],\n",
-    "                  access_token_key=[access token],\n",
-    "                  access_token_secret=[access token secret])"
+    "for p in tweepy.Cursor(api.search, q=\"коронавирус\", count=1, include_rts=False).items():\n",
+    "    "
    ]
   },
   {
@@ -42,7 +54,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p"
+   ]
   }
  ],
  "metadata": {
