--- a/Twitter analysis.ipynb
+++ b/Twitter analysis.ipynb
@@ -25,7 +25,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pass twitter credentials to tweepy\n",
     "with open('cred.json') as json_file:\n",
     "    cred = json.load(json_file)\n",
     "auth = tweepy.OAuthHandler(cred['consumer_key'], cred['consumer_secret'])\n",
@@ -102,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save the data"
+    "## Save"
    ]
   },
   {
@@ -111,12 +110,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump( pages, open( \"recent_keywords2\", \"wb\" ))"
+    "pickle.dump( pages, open( \"recent_keywords_3\", \"wb\" ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1048,7 @@
        "[3587 rows x 8 columns]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -1070,20 +1076,19 @@
        "0.21494284917758572"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_filipche = df_filtered[df_filtered.text.str.startswith('RT @VFilipche')]\n",
-    "\n",
     "df_filipche.size/df_filtered.size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1987,7 +1992,7 @@
        "[771 rows x 8 columns]"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2943,35 +2948,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Words clustering"
+    "## Words count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = {}\n",
-    "for t in df_not_rt.text:\n",
-    "    splitted = t.split(' ')\n",
-    "    for s in splitted:\n",
-    "        s = s.lower()\n",
-    "        d[s] = d.get(s, 0) + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 198,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d_sorted = {k: v for k, v in sorted(d.items(), key=lambda item: item[1], reverse=True)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -3980,12 +3962,19 @@
        " ...}"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "d = {}\n",
+    "for t in df_not_rt.text:\n",
+    "    splitted = t.split(' ')\n",
+    "    for s in splitted:\n",
+    "        s = s.lower()\n",
+    "        d[s] = d.get(s, 0) + 1\n",
+    "d_sorted = {k: v for k, v in sorted(d.items(), key=lambda item: item[1], reverse=True)}\n",
     "d_sorted"
    ]
   },
